# SPDX-FileCopyrightText: 2022 - 2023 Robin Vobruba <hoijui.quaero@gmail.com>
#
# SPDX-License-Identifier: Unlicense

[package]
name = "cli_utils_hoijui"
version = "0.7.0"
license = "AGPL-3.0-or-later"
authors = ["Robin Vobruba <hoijui.quaero@gmail.com>"]
description = """
    A tiny CLI utilities library,
    providing functions and constants useful in many CLI tools.
    """
repository = "https://github.com/hoijui/cli-utils-rs"
homepage = "https://github.com/hoijui/cli-utils-rs"
keywords = ["cli", "utility"]
categories = ["command-line-utilities", "text-processing"]
readme = "README.md"
edition = "2021"

[lints.rust]
rust_2021_compatibility = "warn"

[lints.clippy]
all = "deny"
pedantic = "warn"
nursery = "warn"
cargo = "warn"
wildcard_enum_match_arm = "warn"
string_slice = "warn"
indexing_slicing = "warn"
clone_on_ref_ptr = "warn"
try_err = "warn"
shadow_reuse = "warn"
empty_structs_with_brackets = "warn"
else_if_without_else = "warn"
use_debug = "warn"
print_stdout = "warn"
print_stderr = "warn"

[dependencies]
once_cell = "1.18"
