# SPDX-FileCopyrightText: 2022-2025 Robin Vobruba <hoijui.quaero@gmail.com>
#
# SPDX-License-Identifier: Unlicense

[package]
# NOTE We use the "_hoijui" postfix, because we assume
#      that this crate will not be of much interest
#      to the general public.
#      This allows us to publish it anyway,
#      without blocking the short name
#      for a more meaningful crate in the future.
name = "cli_utils_hoijui"
version = "0.11.0"
license = "AGPL-3.0-or-later"
authors = ["Robin Vobruba <hoijui.quaero@gmail.com>"]
description = """A tiny CLI utilities library,
providing functions and constants useful in many CLI tools."""
repository = "https://github.com/hoijui/cli-utils-rs"
homepage = "https://github.com/hoijui/cli-utils-rs"
keywords = ["cli", "utility"]
categories = ["command-line-utilities", "command-line-interface", "config", "rust-patterns"]
readme = "README.md"
edition = "2024"

[lints.rust]
rust_2024_compatibility = { level = "warn", priority = -1 }

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
wildcard_enum_match_arm = "warn"
string_slice = "warn"
indexing_slicing = "warn"
clone_on_ref_ptr = "warn"
try_err = "warn"
shadow_reuse = "warn"
empty_structs_with_brackets = "warn"
else_if_without_else = "warn"
use_debug = "warn"
print_stdout = "warn"
print_stderr = "warn"
multiple_crate_versions = { level = "allow", priority = 1 }

[dependencies]
async-std = { version = "1.13", optional = true }
async-walkdir = { version = "2.1", default-features = false, optional = true }
futures = { version = "0.3", default-features = false, optional = true }
log = { version = "0.4", default-features = false, optional = true }
regex = { version = "1.12", default-features = false, optional = true }
serde = { version = "1.0", default-features = false, features = ["std", "derive"], optional = true }
serde_regex = { version = "1.1", default-features = false, optional = true }
thiserror = { version = "2.0", default-features = false, optional = true }
tracing = { version = "0.1", default-features = false, optional = true }
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt"], optional = true }
url = { version = "2.5", default-features = false, optional = true }
wildmatch = { version = "2.5", default-features = false, features = [ "serde" ], optional = true }

[dev-dependencies]
tokio = { version = "1.48", default-features = false, features = ["rt", "macros"] }

[features]
default = []

# Allow to reduce dependencies,
# if logging/tracing is not required.
logging = ["dep:log", "dep:tracing", "dep:tracing-subscriber"]

# Allow to reduce dependencies,
# if the `std_errors::Error` enum is not required.
std_error = ["dep:thiserror"]

# Allow to reduce dependencies,
# if the `std_errors::Error::InvalidUrl` enum variant is not required.
url_parse_error = ["std_error", "dep:url"]

# Use async_std instead of std
async = ["dep:async-std"]

# Support/Implement serde (serialization framework)
serde = ["dep:serde", "dep:serde_regex"]

# Provide a convenience struct to be used for include paths provided as CLI args,
# plus functions for their application.
ignore_path = ["dep:regex", "dep:thiserror", "dep:wildmatch"]

# Provide async functions for conveniently scan for files in a dir, recursively.
file_traversal = ["async", "dep:futures", "dep:thiserror", "dep:async-walkdir"]
